// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionBank adapter construct builds with attributes 1`] = `
Object {
  "modelState": Object {
    "choose": 2,
    "groupSize": 2,
    "select": "random-all",
    "shuffleGroup": true,
  },
}
`;

exports[`QuestionBank adapter construct builds without attributes 1`] = `
Object {
  "modelState": Object {
    "choose": Infinity,
    "groupSize": 1,
    "select": "sequential",
    "shuffleGroup": false,
  },
}
`;

exports[`QuestionBank adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "choose": 2,
    "groupSize": 2,
    "select": "random-all",
  },
}
`;
